modify gulp build way

--- a/app/index.html
+++ b/app/index.html
@@ -69,10 +69,11 @@
 
         <!--测试环境-->
         <!--<script src="libs/require.js" data-main="scripts/main"></script>-->
+        
+        <!-- build:require -->
+            <script src="libs/require.js" data-main="scripts/main"></script>      
+        <!-- endbuild -->
 
-        <script src="min/coanseed.min.js"></script>
-      
-  
 
         <!--grunt构建-->
         <!--<script src="build/scripts/coanseed.min-7e38eb0d32.js"></script> -->
