add NF_DEFER_BOOTSTRAP to defer load

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html xmlns:ng="http://angularjs.org" ng-app="ThCofAngSeed" id="ng-app">
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="libs/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="styles/main.css">
   </head>
-  <body ng-app="ThCofAngSeed">
-    <div class="header" ng-controller="baseCtrl">
+  <body  ng-controller="baseCtrl">
+    <div class="header">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
