--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,51 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!--测试环境-->
+    <link rel="stylesheet" href="http://apps.bdimg.com/libs/fontawesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="libs/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body  ng-controller="baseCtrl">
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+      <div class="navbar navbar-default md-whiteframe-z4">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="javascript:void(0)">Brand<div class="ripple-wrapper"></div></a>
+        </div>
+        <div class="navbar-collapse collapse navbar-responsive-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="javascript:void(0)">Active<div class="ripple-wrapper"></div></a></li>
+                <li><a href="javascript:void(0)">Link<div class="ripple-wrapper"></div></a></li>
+                <li class="dropdown">
+                    <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Dropdown <b class="caret"></b><div class="ripple-wrapper"></div></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="javascript:void(0)">Action</a></li>
+                        <li><a href="javascript:void(0)">Another action</a></li>
+                        <li><a href="javascript:void(0)">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Dropdown header</li>
+                        <li><a href="javascript:void(0)">Separated link</a></li>
+                        <li><a href="javascript:void(0)">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="navbar-form navbar-left">
+                <input type="text" class="form-control col-lg-8" placeholder="Search">
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="javascript:void(0)">Link</a></li>
+                <li class="dropdown">
+                    <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="javascript:void(0)">Action</a></li>
+                        <li><a href="javascript:void(0)">Another action</a></li>
+                        <li><a href="javascript:void(0)">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="javascript:void(0)">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
                         <img src="images/yeoman.png" alt="">
 
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -24,27 +61,60 @@
               <span class="icon-bar"></span>
             </button>
             <div>
-              <button md-button class="md-raised">Button</button>
-              <button md-button class="md-raised md-primary">Primary</button>
-              <button md-button ng-disabled="true" class="md-raised md-primary">Disabled</button>
-              <button md-button class="md-raised md-warn">Warn</button>
+              <a href="/" class="md-button md-default-theme">
+                link
+              </a>
+              <button md-button class="md-raised">
+                <md-icon class="fa fa-cog fa-lg"></md-icon>
+                Setting
+              </button>
+              <button md-button class="md-raised md-primary">
+                <md-icon class="fa fa-trash-o fa-lg"></md-icon>
+                Primary
+              </button>
+              <button md-button ng-disabled="true" class="md-raised md-primary">
+                <md-icon class="fa fa-spinner fa-pulse fa-lg"></md-icon>
+                Disabled
+              </button>
+              <button md-button class="md-raised md-warn">
+                <md-icon class="fa fa-pencil fa-fw fa-lg"></md-icon>
+                Warn
+              </button>
               <div class="label">Raised</div>
+              <a  data-modal="#modal" class="modal__trigger">Modal 1</a>
+              <!--模态窗口-->
+              <div id="modal" class="modal modal__bg" role="dialog" aria-hidden="true">
+                <div class="modal__dialog">
+                  <div class="modal__content">
+                    <h1>Modal</h1>
+                    <p>人生之路本来是坎坷不平的。绝对一帆风顺的人生是不存在的，人的一生经历艰难曲折是必然的。从古至今，凡是在某一领域有所建树的人，无一不是经历过曲折和磨难的。</p>
+                    
+                    <!-- modal close button -->
+                    <a class="modal__close demo-close">
+                      <i class="fa fa-times"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>  
             </div>
             <a class="navbar-brand" href="#/"  ng-cloak>{{go}}</a>
-          </div>
+          
+          <ul class="pagination">
+              <li class="disabled"><a href="javascript:void(0)">«</a></li>
+              <li class="active"><a href="javascript:void(0)">1</a></li>
+              <li><a href="javascript:void(0)">2</a></li>
+              <li><a href="javascript:void(0)">3</a></li>
+              <li><a href="javascript:void(0)">4</a></li>
+              <li><a href="javascript:void(0)">5</a></li>
+              <li><a href="javascript:void(0)">»</a></li>
+          </ul>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <div layout="row" layout-margin layout-fill layout-padding>
+      <div flex class="md-raised md-pink md-button md-default-theme">I'm on the left, and there's an empty area around me.</div>
+      <div flex class="md-raised md-grey md-button md-default-theme">I'm on the left, and there's an empty area around me.</div>
+      <div flex class="md-raised md-light-blue md-button md-default-theme">I'm on the left, and there's an empty area around me.</div>
+      <div flex class="md-raised md-amber md-button md-default-theme">I'm on the right, and there's an empty area around me.</div>
     </div>
-
     <div class="container">
     <div ng-view=""></div>
     </div>
